updates to manucript figs

--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -70,14 +70,16 @@ format:
       toggle: false
       caption: none
     grid:
-      sidebar-width: 250px
-      margin-width: 250px
+      sidebar-width: 200px
+      margin-width: 0px
   pdf: 
     geometry:
       - top=30mm
       - left=20mm
+    keep_tex: yes
     #fontfamily: libertinus
     #fontsize: 20pt
+    colorlinks: true
 format-links: [html, pdf]
 
 execute:
@@ -85,7 +87,6 @@ execute:
 
 output: 
   rticles::arxiv_article
-
 bibliography: "references.bib"
 biblio-style: unsrt
 ---
@@ -97,7 +98,6 @@ biblio-style: unsrt
 \[section still be developed...\]
 
 ## The ABCD Study® Data
-
 Participants enrolled in the ABCD Study include a large cohort of youth (n=11880) aged 9-10 years at baseline and their parents/guardians. The study sample was recruited from household populations in defined catchment areas for each of the 21 study sites across the United States (information regarding funding agencies, recruitment sites, investigators, and project organization can be obtained at the ABCD Study website). The ABCD Study is collecting longitudinal data on a rich variety of outcomes that will enable the construction of realistically-complex etiological models by incorporating factors from many domains simultaneously. Each new wave of data collection provides the building blocks for conducting probing longitudinal analyses that allow us to characterize normative development, identify variables that presage deviations from prototypic development, and assess a range of outcomes associated with variables of interest. This data includes a neurocognitive battery [@luciana2018a; @thompson2019], mental and physical health assessments [@barch2018], measures of culture and environment [@zucker2018], substance use \[add citation\], biospecimens [@uban2018], structural and functional brain imaging [@casey2018; @hagler2019], geolocation-based environmental exposure data, wearables, and mobile technology [@bagot2018], and whole genome genotyping [@loughnan2020]. Many of these measures are collected at in-person annual visits, with brain imaging collected at baseline and every other year going forward. A limited number of assessments are collected in semi-annual telephone interviews between in-person visits. Data are publicly released on an annual basis through the NIMH Data Archive. By necessity, the study's earliest data releases were cross-sectional (i.e., the baseline data), however, the most recent public data release (NDA Release 4.0) contains data collected across three annual assessments, including two imaging assessments (baseline and year 2 follow-up visits).
 
 ## Organization of current manuscript
@@ -105,6 +105,12 @@ Participants enrolled in the ABCD Study include a large cohort of youth (n=11880
 The rich longitudinal nature of the ABCD Study dataset will allow researchers to perform analyses of both methodological and substantive interest. This report describes methods for longitudinal analyses of ABCD Study data that can address its fundamental scientific aims, as well as challenges inherent in a large population-based long-term study of adolescents. The manuscript is organized as follows:
 
 \[section still be developed...\]
+
+::: {.callout-note  collapse="true"}
+## Tip with Title
+Note that there are five types of callouts, including:
+`xxxxx`, `xxxxxx`, `xxxxxx`.
+:::
 
 # Part I: Longitudinal Research
 
@@ -196,13 +202,8 @@ Section focused on different ways of considering/grouping/deciding on which spec
 
 ### Subsection TBD.
 
-xxxxxx
+![Longitudinal Models](./figures/Mindmap1.png){#fig-LONGmod fig-alt="Longitudinal Models Diagram." width=600 height=400 fig-align="center"}
 
-
-
-xxxxxx
-
-![test](./figures/Mindmap1.png)
 
 # Part IV: Discussion
 
@@ -236,6 +237,9 @@ xxxxxx
 axasx
 
 See @tbl-lda.
+
+xxxxx
+
 
 # Part V: References
 
