--- a/index.qmd
+++ b/index.qmd
@@ -6,20 +6,16 @@ format:
     theme: cosmo
     page-layout: full
     grid:
-      sidebar-width: 250px
+      sidebar-width: 0px
       body-width: 2000px
-      margin-width: 100px
-    gutter-width: 1.5rem
+      margin-width: 0px
+    #gutter-width: 1.5rem
 ---
 
-::: {.grid}
 
-::: {.g-col-12}
+::: {.column-screen}
 ![](./figures/Figlanding5.svg)
 :::
-
-:::
-
 
 
 
