--- a/temp.qmd
+++ b/temp.qmd
@@ -1,21 +1,982 @@
 ---
-title: "Tutorials: A Brief Overview"
+#title: "Tutorials: A Brief Overview"
 format:
   html:
     page-layout: full
     grid:
+      #sidebar-width: 250px
       sidebar-width: 0px
       body-width: 2000px
       margin-width: 0px
-      gutter-width: 1.5rem
-    mermaid:
-      theme: forest
-#    css: styles.css
+      #gutter-width: 1.5rem
+    #mermaid:
+      #theme: forest
+    css: styles.css
 #    theme: cosmo
 #    fontsize: 1.1em
 #    linestretch: 1.7
 
+
 ---
+
+<script src="https://cdn.tailwindcss.com"></script>
+
+```{html}
+<div class="alert alert-primary" role="alert">
+  This is a primary alert—check it out!
+</div>
+```
+
+xxxyyyzzz
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```       
+\begin{tabular}[t]{@{}l}
+This is where the reciepient goes \\ 
+Address 1 \\
+Address 2 \\
+Address 3 \\
+Address 3 \\
+\end{tabular}
+\hfill
+\begin{tabular}[t]{@{}l}
+This is where the sender goes \\  
+Person \\
+Department \\ 
+Address 1 \\ 
+Address 2 \\  
+Address 3 \\  
+Address 4 \\  
+Address 5 \\  
+Address 6 \\ 
+Telephone \\  
+Fax \\  
+Email \\
+\end{tabular}
+
+xxxyyyzzz
+xxxxx
+
+<div class="alert alert-primary" role="alert">
+  This is a primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+</div>
+
+<span class="badge badge-pill badge-primary">Primary</span>
+
+
+<a href="#" class="badge badge-primary">Primary</a>
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <div class="card-title">Card title</div>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    This is some text within a card body.
+  </div>
+</div>
+
+
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+  <div class="card-body">
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+<div class="card">
+  <h5 class="card-header">Featured</h5>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+  <div class="card-header">Header</div>
+  <div class="card-body">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+
+<div class="card border-primary mb-3" style="max-width: 18rem;">
+  <div class="card-header">Header</div>
+  <div class="card-body text-primary">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+
+<div class="card border-success mb-3" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-success">Header</div>
+  <div class="card-body text-success">
+    <h5 class="card-title">Success card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+  <div class="card-footer bg-transparent border-success">Footer</div>
+</div>
+<div class="alert alert-success" role="alert">
+  <h4 class="alert-heading">Well done!</h4>
+  <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+  <hr>
+  <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+</div>
+
+<dl class="row">
+  <dt class="col-sm-3">Description lists</dt>
+  <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
+
+  <dt class="col-sm-3">Euismod</dt>
+  <dd class="col-sm-9">
+    <p>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</p>
+    <p>Donec id elit non mi porta gravida at eget metus.</p>
+  </dd>
+
+  <dt class="col-sm-3">Malesuada porta</dt>
+  <dd class="col-sm-9">Etiam porta sem malesuada magna mollis euismod.</dd>
+
+  <dt class="col-sm-3 text-truncate">Truncated term is truncated</dt>
+  <dd class="col-sm-9">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
+
+  <dt class="col-sm-3">Nesting</dt>
+  <dd class="col-sm-9">
+    <dl class="row">
+      <dt class="col-sm-4">Nested definition list</dt>
+      <dd class="col-sm-8">Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc.</dd>
+    </dl>
+  </dd>
+</dl>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+
+<div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>
+<div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
+<div class="w-75 p-3" style="background-color: #eee;">Width 75%</div>
+<div class="w-100 p-3" style="background-color: #eee;">Width 100%</div>
+
+<div style="height: 100px; background-color: rgba(255,0,0,0.1);">
+  <div class="h-25 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
+  <div class="h-50 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 50%</div>
+  <div class="h-75 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 75%</div>
+  <div class="h-100 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 100%</div>
+</div>
+
+<p class="text-justify">Ambitioni dedisse scripsisse iudicaretur. Cras mattis iudicium purus sit amet fermentum. Donec sed odio operae, eu vulputate felis rhoncus. Praeterea iter est quasdam res quas ex communi. At nos hinc posthac, sitientis piros Afros. Petierunt uti sibi concilium totius Galliae in diem certam indicere. Cras mattis iudicium purus sit amet fermentum.</p>
+
+<p class="text-left">Left aligned text on all viewport sizes.</p>
+<p class="text-center">Center aligned text on all viewport sizes.</p>
+<p class="text-right">Right aligned text on all viewport sizes.</p>
+
+<p class="text-sm-left">Left aligned text on viewports sized SM (small) or wider.</p>
+<p class="text-md-left">Left aligned text on viewports sized MD (medium) or wider.</p>
+<p class="text-lg-left">Left aligned text on viewports sized LG (large) or wider.</p>
+<p class="text-xl-left">Left aligned text on viewports sized XL (extra-large) or wider.</p>
+
+<p class="font-weight-bold">Bold text.</p>
+<p class="font-weight-normal">Normal weight text.</p>
+<p class="font-weight-light">Light weight text.</p>
+<p class="font-italic">Italic text.</p>
+
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+
+<blockquote class="blockquote">
+  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+</blockquote>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+
+
+<table class="hover:table-fixed">
+  <thead>
+    <tr>
+      <th>Song</th>
+      <th>Artist</th>
+      <th>Year</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
+      <td>Malcolm Lockyer</td>
+      <td>1961</td>
+    </tr>
+    <tr>
+      <td>Witchy Woman</td>
+      <td>The Eagles</td>
+      <td>1972</td>
+    </tr>
+    <tr>
+      <td>Shining Star</td>
+      <td>Earth, Wind, and Fire</td>
+      <td>1975</td>
+    </tr>
+  </tbody>
+</table>
+
+::: {.column-screen}
+![-](./figures/Figlanding5.svg)
+:::
+
+xxxxx
+
+
+file:///Users/shawes/git/swhawes.github.io/docs/manuscript.html
+xxxxx
+
+```{dot}
+digraph "Linux_kernel_diagram" {
+	fontname="Helvetica,Arial,sans-serif"
+	node [fontname="Helvetica,Arial,sans-serif"]
+	edge [fontname="Helvetica,Arial,sans-serif"]
+	graph [
+		newrank = true,
+		nodesep = 0.3,
+		ranksep = 0.2,
+		overlap = true,
+		splines = false,
+	]
+	node [
+		fixedsize = false,
+		fontsize = 24,
+		height = 1,
+		shape = box,
+		style = "filled,setlinewidth(5)",
+		width = 2.2
+	]
+	edge [
+		arrowhead = none,
+		arrowsize = 0.5,
+		labelfontname = "Ubuntu",
+		weight = 10,
+		style = "filled,setlinewidth(5)"
+	]
+	subgraph system {
+		node [color = "#e27dd6ff"]
+		edge [color = "#e27dd6ff"]
+		system_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			shape = point
+		]
+		system [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/System",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		system -> system_ [
+			arrowhead = "",
+			row = func];
+		SCI [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Syscalls",
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "System calls",
+			row = usr,
+			shape = ellipse]
+		sysfs [
+			fillcolor = "#b2d3e4",
+			label = "proc & sysfs\nfile systems"]
+		SCI -> sysfs
+		DM [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			height = 0.8,
+			label = "Device\nModel",
+			shape = octagon,
+			width = 2]
+		sysfs -> DM
+		log_sys [
+			fillcolor = "#6a9ab1",
+			fontsize = 20,
+			label = "system run,\nmodules,\ngeneric\nHW access "]
+		DM -> log_sys
+		bus_drv [
+			fillcolor = "#71809b",
+			label = "bus drivers"]
+		log_sys -> bus_drv
+		buses [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "buses:\nPCI, USB ...",
+			row = chip]
+		bus_drv -> buses
+	}
+	subgraph networking {
+		node [color = "#61c2c5"]
+		edge [color = "#61c2c5"]
+		networking_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			shape = point
+				width = 0]
+		networking [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Networking",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		networking -> networking_ [
+			arrowhead = "",
+			row = func]
+		sock [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = Sockets,
+			row = usr,
+			shape = ellipse]
+		prot_fam [
+			fillcolor = "#b2d3e4",
+			label = "protocol\nfamilies"]
+		sock -> prot_fam
+		log_prot [
+			fillcolor = "#6a9ab1",
+			label = "protocols:\nTCP, UDP, IP"]
+		prot_fam -> log_prot
+		netif [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			label = "network\ninterfaces\nand drivers"]
+		log_prot -> netif
+		net_hw [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "network:\nEthernet, WiFi ...",
+			row = chip]
+		netif -> net_hw
+		NFS [
+			color = "#8383cc",
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			height = 0.8,
+			label = NFS,
+			shape = octagon,
+			width = 1.2]
+		NFS -> log_prot [weight = 0]
+	}
+	subgraph processing {
+		node [color = "#c46747"]
+		edge [color = "#c46747"]
+		processing_ [
+			fixedsize = true,
+			height = 0,
+			shape = point
+				style = invis,
+			width = 0]
+		processing [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Processing",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		processing -> processing_ [
+			arrowhead = "",
+			row = func]
+		proc [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = Processes,
+			row = usr,
+			shape = ellipse]
+		Tasks [
+			fillcolor = "#b2d3e4"]
+		proc -> Tasks
+		sync [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			fontname = "Arial Narrow"
+			label = synchronization,
+			height = 0.7,
+			//width = 2,
+			shape = octagon]
+		Tasks -> sync
+		sched [
+			fillcolor = "#6a9ab1",
+			label = Scheduler]
+		sync -> sched
+		IRQ [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			label = "interrupts\ncore,\nCPU arch"]
+		sched -> IRQ
+		CPU [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			row = chip]
+		IRQ -> CPU
+	}	// processing
+	subgraph mem {
+		node [
+			color = "#51bf5b",
+			height = 1
+		]
+		edge [color = "#51bf5b"]
+		MA [
+			color = "#51bf5b",
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "memory\naccess",
+			row = usr,
+			height = 1,
+			shape = ellipse]
+		MA -> VM
+		mmap [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			height = 0.8,
+			label = "memory\nmapping",
+			shape = octagon,
+			width = 2]
+		mmap -> log_mem
+		log_mem -> PA
+		SW [
+			color = "#8383cc",
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			label = Swap,
+			height = 0.8,
+			shape = octagon,
+			width = 1.2]
+		mmap -> SW [weight = 1]
+		SW -> block [
+			color = "#8383cc", weight = 1]
+		PA [
+			fillcolor = "#71809b",
+			label = "Page\nAllocator"
+		]
+		PC -> PA [weight = 0 color="#51bf5b"]
+		RAM [
+			color = "#51bf5b",
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "MMU, RAM",
+			height = 1,
+			row = chip]
+		PA -> RAM
+		memory -> memory_ [
+			arrowhead = "",
+			row = func]
+		VM -> mmap
+	}	// mem
+	subgraph storage {
+		node [color = "#8383cc"]
+		edge [color = "#8383cc"]
+		NFS;
+		storage_ [
+			shape = point,
+			fixedsize = true,
+			height = 0,
+			style = invis,
+			width = 0]
+		storage [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Storage",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		storage -> storage_ [
+			arrowhead = "",
+			row = func]
+		FS [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "files and\ndirectories",
+			row = usr,
+			shape = ellipse]
+		VFS [
+			fillcolor = "#b2d3e4",
+			label = "Virtual\nFile System"]
+		FS -> VFS
+		VFS -> mmap [weight = 0]
+		VFS -> NFS [weight = 0]
+		logFS [
+			fillcolor = "#6a9ab1",
+			fontsize = 20,
+			label = "logical\nfilesystems:\next3, xfs ..."]
+		VFS -> logFS
+		PC [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			height = 0.8,
+			label = "page\ncache",
+			shape = octagon,
+			width = 1.2]
+		VFS -> PC [weight = 0]
+		block [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			label = "Block\ndevices\nand drivers"]
+		logFS -> block
+		SD [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "storage devices:\nSCSI, NVMe ...",
+			row = chip]
+		block -> SD
+	}	// storge
+	subgraph HI {
+		node [color = "#cfbf57ff"]
+		edge [
+			color = "#cfbf57ff",
+			weight = 10
+		]
+		HI_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		HI [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Human_interfaces",
+			fillcolor = white,
+			fixedsize = true,
+			fontsize = 12,
+			height = 0.6,
+			label = "Forms\nof\nchange",
+			row = func,
+			width = 2]
+		HI -> HI_ [
+			arrowhead = "",
+			row = func]
+		char [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "char\ndevices",
+			row = usr,
+			shape = ellipse]
+		input [
+			fillcolor = "#b2d3e4",
+			label = "input\nsubsystem"]
+		char -> input
+		F7 [
+			fillcolor = "#6a9ab1",
+			label = "HI class\ndrivers"]
+		input -> F7
+		HID [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			URL = "https://www.kernel.org/doc/html/latest/hid/",
+			label = "HI\nperipherals\ndrivers"]
+		F7 -> HID
+		display [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 19,
+			label = "keyboard, mouse,\ndisplay, audio",
+			row = chip]
+		HID -> display
+	} // HI
+	subgraph functions {
+		graph [rank = same]
+		edge [
+			style = invis,
+			weight = 1
+		]
+		system;
+		networking;
+		system -> processing [weight = 1]
+		storage -> networking [weight = 1]
+		memory [
+			color = "#51bf5b",
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Memory",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		memory -> storage [weight = 1]
+		processing -> memory [weight = 1]
+		functions_ [
+			fixedsize = true,
+			height = 0,
+			shape = point
+			style = invis,
+			width = 0]
+		functions_ -> HI -> system [weight = 1]
+		functions [
+			color = gray,
+			tooltip = "Columns represent main functionalities of the kernel",
+			URL = "http://www.makelinux.net/ldd3/chp-1-sect-2.shtml",
+			fillcolor = gray,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			style = dashed,
+			width = 1.6]
+		functions -> functions_ [
+			arrowhead = "",
+			color = gray,
+			style = "",
+			weight = ""]
+	}
+	subgraph interfaces {
+		graph [rank = same]
+		SCI;
+		sock;
+		FS;
+		proc;
+		char;
+		usr_ [
+			fixedsize = true,
+			height = 0,
+			shape = point
+				style = invis,
+			width = 0.5]
+		usr [
+			fillcolor = "#d9e7eeff",
+			fixedsize = true,
+			label = "user space\ninterfaces",
+			row = usr,
+			shape = ellipse,
+			style = "filled,setlinewidth(0)"]
+		MA;
+	}
+	{
+		edge [style = invis weight = 10 ]
+		system_;
+		SCI;
+		system_ -> SCI;
+		networking_;
+		sock;
+		networking_ -> sock;
+		storage_;
+		FS;
+		storage_ -> FS;
+		processing_;
+		proc;
+		processing_ -> proc;
+		HI_;
+		char;
+		HI_ -> char;
+		MA;
+		memory_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		memory_ -> MA;
+	}
+	subgraph virtual {
+		graph [rank = same]
+		sysfs;
+		prot_fam;
+		VFS;
+		Tasks;
+		input;
+		D0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		virt [
+			fillcolor = "#b2d3e4",
+			label = "virtual\nsubsystems",
+			URL = "https://en.wikipedia.org/wiki/Proxy_pattern",
+			tooltip = "proxy between standard user space interfaces and internal implementations",
+			style = "filled,setlinewidth(0)"]
+		VM [
+			color = "#51bf5b",
+			fillcolor = "#b2d3e4",
+			label = "Virtual\nmemory"]
+	}
+	subgraph bridges {
+		graph [rank = same]
+		bridges [
+			fillcolor = "#91b5c9",
+			shape = octagon,
+			tooltip = "bridges between uniform virtual interfaces and various implementations",
+			URL = "https://en.wikipedia.org/wiki/Bridge_pattern",
+			style = "filled,setlinewidth(0)"]
+		DM;
+		NFS;
+		mmap;
+		sync;
+		E0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		//PC
+	}
+	subgraph logical {
+		graph [rank = same]
+		log_sys;
+		log_prot;
+		logFS;
+		sched;
+		F7;
+		F0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		logical [
+			fillcolor = "#6a9ab1",
+			style = "filled,setlinewidth(0)"]
+		log_mem [
+			color = "#51bf5b",
+			fillcolor = "#6a9ab1",
+			label = "logical\nmemory"]
+		//SW
+	}
+	subgraph HWI {
+		graph [rank = same]
+		HWI [
+			fillcolor = "#71809b",
+			label = "hardware\ninterfaces",
+			style = "filled,setlinewidth(0)"]
+		bus_drv;
+		netif;
+		block;
+		//PA;
+		IRQ;
+		HID;
+		G0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+	}
+	subgraph HW {
+		graph [rank = same]
+		HW [
+			fillcolor = "#777777",
+			fontcolor = white,
+			label = "electronics,\nhardware",
+			row = chip,
+			style = "filled,setlinewidth(0)"]
+		buses;
+		net_hw;
+		SD;
+		CPU;
+		display;
+		H0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		RAM;
+	}
+	bottom [
+		label = "© 2007-2022 Costa Shulyupin http://www.MakeLinux.net/kernel/diagram",
+		URL = "http://www.MakeLinux.net/kernel/diagram",
+		shape = plaintext,
+		style = ""]
+	CPU -> bottom [style = invis]
+	layers [
+		fillcolor = lightgray,
+		tooltip = "Functionalities are divided to common layers. It is approximate division.",
+		height = 0.1,
+		style = "filled,setlinewidth(0)",
+		width = 0.5]
+	functions -> layers [style = invis ]
+	usr -> usr_ [
+		arrowhead = "",
+		color = "#d9e7eeff",
+		minlen = 2]
+	usr -> virt [
+		color = "#d9e7eeff"]
+	virt -> D0 [
+		arrowhead = "",
+		color = "#b2d3e4",
+		minlen = 2]
+	virt -> bridges [
+		color = "#b2d3e4"]
+	bridges -> E0 [
+		arrowhead = "",
+		color = "#91b5c9",
+		minlen = 2,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	bridges -> logical [
+		color = "#91b5c9",
+		style = "filled,setlinewidth(6)"]
+	logical -> F0 [
+		arrowhead = "",
+		color = "#6a9ab1",
+		minlen = 2,
+		row = logical,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	logical -> HWI [
+		color = "#6a9ab1",
+		row = logical,
+		style = "filled,setlinewidth(6)"]
+	HWI -> G0 [
+		arrowhead = "",
+		color = "#71809b",
+		minlen = 2,
+		row = HWI,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	HWI -> HW [
+		color = "#71809b",
+		row = HWI,
+		style = "filled,setlinewidth(6)"]
+	HW -> H0 [
+		arrowhead = "",
+		color = "#777777",
+		minlen = 2,
+		row = chip,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	layers -> usr [
+		arrowhead = "",
+		color = gray,
+		style = "filled,setlinewidth(1)"]
+	LKD [
+		fontsize = 40,
+		label = "Linux kernel diagram",
+		shape = plain,
+		style = ""]
+	LKD -> processing [style = invis]
+}
+
+```
+
+
+
+xxxxx
+
 
 ![LPA Structure](./figures/LDA Structure 3.svg)
 
@@ -26,6 +987,639 @@ Section focused on different ways of considering/grouping/deciding on which spec
 
 
 
+```{dot}
+digraph "Linux_kernel_diagram" {
+	fontname="Helvetica,Arial,sans-serif"
+	node [fontname="Helvetica,Arial,sans-serif"]
+	edge [fontname="Helvetica,Arial,sans-serif"]
+	graph [
+		newrank = true,
+		nodesep = 0.3,
+		ranksep = 0.2,
+		overlap = true,
+		splines = false,
+	]
+	node [
+		fixedsize = false,
+		fontsize = 24,
+		height = 1,
+		shape = box,
+		style = "filled,setlinewidth(5)",
+		width = 2.2
+	]
+	edge [
+		arrowhead = none,
+		arrowsize = 0.5,
+		labelfontname = "Ubuntu",
+		weight = 10,
+		style = "filled,setlinewidth(5)"
+	]
+	subgraph system {
+		node [color = "#e27dd6ff"]
+		edge [color = "#e27dd6ff"]
+		system_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			shape = point
+		]
+		system [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/System",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		system -> system_ [
+			arrowhead = "",
+			row = func];
+		SCI [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Syscalls",
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "System calls",
+			row = usr,
+			shape = ellipse]
+		sysfs [
+			fillcolor = "#b2d3e4",
+			label = "proc & sysfs\nfile systems"]
+		SCI -> sysfs
+		DM [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			height = 0.8,
+			label = "Device\nModel",
+			shape = octagon,
+			width = 2]
+		sysfs -> DM
+		log_sys [
+			fillcolor = "#6a9ab1",
+			fontsize = 20,
+			label = "system run,\nmodules,\ngeneric\nHW access "]
+		DM -> log_sys
+		bus_drv [
+			fillcolor = "#71809b",
+			label = "bus drivers"]
+		log_sys -> bus_drv
+		buses [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "buses:\nPCI, USB ...",
+			row = chip]
+		bus_drv -> buses
+	}
+	subgraph networking {
+		node [color = "#61c2c5"]
+		edge [color = "#61c2c5"]
+		networking_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			shape = point
+				width = 0]
+		networking [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Networking",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		networking -> networking_ [
+			arrowhead = "",
+			row = func]
+		sock [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = Sockets,
+			row = usr,
+			shape = ellipse]
+		prot_fam [
+			fillcolor = "#b2d3e4",
+			label = "protocol\nfamilies"]
+		sock -> prot_fam
+		log_prot [
+			fillcolor = "#6a9ab1",
+			label = "protocols:\nTCP, UDP, IP"]
+		prot_fam -> log_prot
+		netif [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			label = "network\ninterfaces\nand drivers"]
+		log_prot -> netif
+		net_hw [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "network:\nEthernet, WiFi ...",
+			row = chip]
+		netif -> net_hw
+		NFS [
+			color = "#8383cc",
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			height = 0.8,
+			label = NFS,
+			shape = octagon,
+			width = 1.2]
+		NFS -> log_prot [weight = 0]
+	}
+	subgraph processing {
+		node [color = "#c46747"]
+		edge [color = "#c46747"]
+		processing_ [
+			fixedsize = true,
+			height = 0,
+			shape = point
+				style = invis,
+			width = 0]
+		processing [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Processing",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		processing -> processing_ [
+			arrowhead = "",
+			row = func]
+		proc [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = Processes,
+			row = usr,
+			shape = ellipse]
+		Tasks [
+			fillcolor = "#b2d3e4"]
+		proc -> Tasks
+		sync [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			fontname = "Arial Narrow"
+			label = synchronization,
+			height = 0.7,
+			//width = 2,
+			shape = octagon]
+		Tasks -> sync
+		sched [
+			fillcolor = "#6a9ab1",
+			label = Scheduler]
+		sync -> sched
+		IRQ [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			label = "interrupts\ncore,\nCPU arch"]
+		sched -> IRQ
+		CPU [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			row = chip]
+		IRQ -> CPU
+	}	// processing
+	subgraph mem {
+		node [
+			color = "#51bf5b",
+			height = 1
+		]
+		edge [color = "#51bf5b"]
+		MA [
+			color = "#51bf5b",
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "memory\naccess",
+			row = usr,
+			height = 1,
+			shape = ellipse]
+		MA -> VM
+		mmap [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			height = 0.8,
+			label = "memory\nmapping",
+			shape = octagon,
+			width = 2]
+		mmap -> log_mem
+		log_mem -> PA
+		SW [
+			color = "#8383cc",
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			label = Swap,
+			height = 0.8,
+			shape = octagon,
+			width = 1.2]
+		mmap -> SW [weight = 1]
+		SW -> block [
+			color = "#8383cc", weight = 1]
+		PA [
+			fillcolor = "#71809b",
+			label = "Page\nAllocator"
+		]
+		PC -> PA [weight = 0 color="#51bf5b"]
+		RAM [
+			color = "#51bf5b",
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "MMU, RAM",
+			height = 1,
+			row = chip]
+		PA -> RAM
+		memory -> memory_ [
+			arrowhead = "",
+			row = func]
+		VM -> mmap
+	}	// mem
+	subgraph storage {
+		node [color = "#8383cc"]
+		edge [color = "#8383cc"]
+		NFS;
+		storage_ [
+			shape = point,
+			fixedsize = true,
+			height = 0,
+			style = invis,
+			width = 0]
+		storage [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Storage",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		storage -> storage_ [
+			arrowhead = "",
+			row = func]
+		FS [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "files and\ndirectories",
+			row = usr,
+			shape = ellipse]
+		VFS [
+			fillcolor = "#b2d3e4",
+			label = "Virtual\nFile System"]
+		FS -> VFS
+		VFS -> mmap [weight = 0]
+		VFS -> NFS [weight = 0]
+		logFS [
+			fillcolor = "#6a9ab1",
+			fontsize = 20,
+			label = "logical\nfilesystems:\next3, xfs ..."]
+		VFS -> logFS
+		PC [
+			fillcolor = "#91b5c9",
+			fixedsize = true,
+			fontsize = 20,
+			height = 0.8,
+			label = "page\ncache",
+			shape = octagon,
+			width = 1.2]
+		VFS -> PC [weight = 0]
+		block [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			label = "Block\ndevices\nand drivers"]
+		logFS -> block
+		SD [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 20,
+			label = "storage devices:\nSCSI, NVMe ...",
+			row = chip]
+		block -> SD
+	}	// storge
+	subgraph HI {
+		node [color = "#cfbf57ff"]
+		edge [
+			color = "#cfbf57ff",
+			weight = 10
+		]
+		HI_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		HI [
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Human_interfaces",
+			fillcolor = white,
+			fixedsize = true,
+			fontsize = 12,
+			height = 0.6,
+			label = "human\ninterface",
+			row = func,
+			width = 2]
+		HI -> HI_ [
+			arrowhead = "",
+			row = func]
+		char [
+			fillcolor = "#d9e7ee",
+			fixedsize = true,
+			label = "char\ndevices",
+			row = usr,
+			shape = ellipse]
+		input [
+			fillcolor = "#b2d3e4",
+			label = "input\nsubsystem"]
+		char -> input
+		F7 [
+			fillcolor = "#6a9ab1",
+			label = "HI class\ndrivers"]
+		input -> F7
+		HID [
+			fillcolor = "#71809b",
+			fontsize = 20,
+			URL = "https://www.kernel.org/doc/html/latest/hid/",
+			label = "HI\nperipherals\ndrivers"]
+		F7 -> HID
+		display [
+			fillcolor = "#777777",
+			fontcolor = white,
+			fontsize = 19,
+			label = "keyboard, mouse,\ndisplay, audio",
+			row = chip]
+		HID -> display
+	} // HI
+	subgraph functions {
+		graph [rank = same]
+		edge [
+			style = invis,
+			weight = 1
+		]
+		system;
+		networking;
+		system -> processing [weight = 1]
+		storage -> networking [weight = 1]
+		memory [
+			color = "#51bf5b",
+			URL = "https://en.wikibooks.org/wiki/The_Linux_Kernel/Memory",
+			fillcolor = white,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			width = 2]
+		memory -> storage [weight = 1]
+		processing -> memory [weight = 1]
+		functions_ [
+			fixedsize = true,
+			height = 0,
+			shape = point
+			style = invis,
+			width = 0]
+		functions_ -> HI -> system [weight = 1]
+		functions [
+			color = gray,
+			tooltip = "Columns represent main functionalities of the kernel",
+			URL = "http://www.makelinux.net/ldd3/chp-1-sect-2.shtml",
+			fillcolor = gray,
+			fixedsize = true,
+			height = 0.6,
+			row = func,
+			style = dashed,
+			width = 1.6]
+		functions -> functions_ [
+			arrowhead = "",
+			color = gray,
+			style = "",
+			weight = ""]
+	}
+	subgraph interfaces {
+		graph [rank = same]
+		SCI;
+		sock;
+		FS;
+		proc;
+		char;
+		usr_ [
+			fixedsize = true,
+			height = 0,
+			shape = point
+				style = invis,
+			width = 0.5]
+		usr [
+			fillcolor = "#d9e7eeff",
+			fixedsize = true,
+			label = "user space\ninterfaces",
+			row = usr,
+			shape = ellipse,
+			style = "filled,setlinewidth(0)"]
+		MA;
+	}
+	{
+		edge [style = invis weight = 10 ]
+		system_;
+		SCI;
+		system_ -> SCI;
+		networking_;
+		sock;
+		networking_ -> sock;
+		storage_;
+		FS;
+		storage_ -> FS;
+		processing_;
+		proc;
+		processing_ -> proc;
+		HI_;
+		char;
+		HI_ -> char;
+		MA;
+		memory_ [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		memory_ -> MA;
+	}
+	subgraph virtual {
+		graph [rank = same]
+		sysfs;
+		prot_fam;
+		VFS;
+		Tasks;
+		input;
+		D0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		virt [
+			fillcolor = "#b2d3e4",
+			label = "virtual\nsubsystems",
+			URL = "https://en.wikipedia.org/wiki/Proxy_pattern",
+			tooltip = "proxy between standard user space interfaces and internal implementations",
+			style = "filled,setlinewidth(0)"]
+		VM [
+			color = "#51bf5b",
+			fillcolor = "#b2d3e4",
+			label = "Virtual\nmemory"]
+	}
+	subgraph bridges {
+		graph [rank = same]
+		bridges [
+			fillcolor = "#91b5c9",
+			shape = octagon,
+			tooltip = "bridges between uniform virtual interfaces and various implementations",
+			URL = "https://en.wikipedia.org/wiki/Bridge_pattern",
+			style = "filled,setlinewidth(0)"]
+		DM;
+		NFS;
+		mmap;
+		sync;
+		E0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		//PC
+	}
+	subgraph logical {
+		graph [rank = same]
+		log_sys;
+		log_prot;
+		logFS;
+		sched;
+		F7;
+		F0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		logical [
+			fillcolor = "#6a9ab1",
+			style = "filled,setlinewidth(0)"]
+		log_mem [
+			color = "#51bf5b",
+			fillcolor = "#6a9ab1",
+			label = "logical\nmemory"]
+		//SW
+	}
+	subgraph HWI {
+		graph [rank = same]
+		HWI [
+			fillcolor = "#71809b",
+			label = "hardware\ninterfaces",
+			style = "filled,setlinewidth(0)"]
+		bus_drv;
+		netif;
+		block;
+		//PA;
+		IRQ;
+		HID;
+		G0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+	}
+	subgraph HW {
+		graph [rank = same]
+		HW [
+			fillcolor = "#777777",
+			fontcolor = white,
+			label = "electronics,\nhardware",
+			row = chip,
+			style = "filled,setlinewidth(0)"]
+		buses;
+		net_hw;
+		SD;
+		CPU;
+		display;
+		H0 [
+			fixedsize = true,
+			height = 0,
+			shape = point,
+			style = invis,
+			width = 0]
+		RAM;
+	}
+	bottom [
+		label = "© 2007-2022 Costa Shulyupin http://www.MakeLinux.net/kernel/diagram",
+		URL = "http://www.MakeLinux.net/kernel/diagram",
+		shape = plaintext,
+		style = ""]
+	CPU -> bottom [style = invis]
+	layers [
+		fillcolor = lightgray,
+		tooltip = "Functionalities are divided to common layers. It is approximate division.",
+		height = 0.1,
+		style = "filled,setlinewidth(0)",
+		width = 0.5]
+	functions -> layers [style = invis ]
+	usr -> usr_ [
+		arrowhead = "",
+		color = "#d9e7eeff",
+		minlen = 2]
+	usr -> virt [
+		color = "#d9e7eeff"]
+	virt -> D0 [
+		arrowhead = "",
+		color = "#b2d3e4",
+		minlen = 2]
+	virt -> bridges [
+		color = "#b2d3e4"]
+	bridges -> E0 [
+		arrowhead = "",
+		color = "#91b5c9",
+		minlen = 2,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	bridges -> logical [
+		color = "#91b5c9",
+		style = "filled,setlinewidth(6)"]
+	logical -> F0 [
+		arrowhead = "",
+		color = "#6a9ab1",
+		minlen = 2,
+		row = logical,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	logical -> HWI [
+		color = "#6a9ab1",
+		row = logical,
+		style = "filled,setlinewidth(6)"]
+	HWI -> G0 [
+		arrowhead = "",
+		color = "#71809b",
+		minlen = 2,
+		row = HWI,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	HWI -> HW [
+		color = "#71809b",
+		row = HWI,
+		style = "filled,setlinewidth(6)"]
+	HW -> H0 [
+		arrowhead = "",
+		color = "#777777",
+		minlen = 2,
+		row = chip,
+		style = "filled,setlinewidth(6)",
+		weight = ""]
+	layers -> usr [
+		arrowhead = "",
+		color = gray,
+		style = "filled,setlinewidth(1)"]
+	LKD [
+		fontsize = 40,
+		label = "Linux kernel diagram",
+		shape = plain,
+		style = ""]
+	LKD -> processing [style = invis]
+}
+
+```
 
 
 
